deployment/k8s/base/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lasntgadmin-redis
  labels:
    app: lasntgadmin-redis
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      tolerations:
        - key: cloud.google.com/gke-nodepool
          operator: Equal
          value: lasntg-pool
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: DoesNotExist
              - key: cloud.google.com/gke-nodepool
                operator: In
                values:
                - lasntg-pool
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - europe-west1-d
      containers:
      - name: lasntgadmin
        image: redis:7-alpine
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 6379
        readinessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 10
          periodSeconds: 30
        livenessProbe:
          exec:
            command:
              - redis-cli
              - ping
          initialDelaySeconds: 10
          periodSeconds: 30
        startupProbe:
          exec:
            command:
              - redis-cli
              - ping
          periodSeconds: 30
          initialDelaySeconds: 60
        resources:
          limits:
            cpu: 500m
            memory: 512M
          requests:
            cpu: 200m
            memory: 256M
        volumeMounts:
        - name: redis-config
          mountPath: /usr/local/etc/redis/redis.conf
          subPath: redis.conf
          readOnly: true
      volumes:
        - name: redis-config
          configMap:
            name: lasntgadmin-redis-config
