deployment/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lasntgadmin
  labels:
    app: lasntgadmin
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: lasntgadmin
  template:
    metadata:
      labels:
        app: lasntgadmin
    spec:
      securityContext:
        fsGroup: 33
        #runAsGroup: 33
        #fsGroupChangePolicy: "OnRootMismatch"
      tolerations:
        - key: cloud.google.com/gke-nodepool
          operator: Equal
          value: lasntg-pool
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: cloud.google.com/gke-nodepool
                operator: In
                values:
                - staging-pool
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - europe-west1-d
      containers:
      - name: lasntgadmin
        image: php:7-apache
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 5
          httpGet:    
            path: /wp-json/wp-site-health/v1/tests/loopback-requests
            port: 80
          periodSeconds: 60
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /wp-json/wp-site-health/v1/tests/loopback-requests
            port: 80
          periodSeconds: 60
          timeoutSeconds: 60
        startupProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /wp-json/wp-site-health/v1/tests/loopback-requests
            port: 80
          periodSeconds: 60
          timeoutSeconds: 30
        resources:
          limits:
            cpu: 3000m
            memory: 6144M
          requests:
            cpu: 1000m
            memory: 4096M
        volumeMounts: 
        - name: wp-content
          mountPath: /var/www/html/wp-content
          readOnly: false
        - name: wp-config
          mountPath: /var/www/html/wp-config.php
          subPath: wp-config.php
          readOnly: false
        - name: db-config
          mountPath: /var/www/html/db-config.php
          subPath: db-config.php
          readOnly: false
        - name: php-config
          mountPath: /usr/local/etc/php/php.ini
          subPath: php.ini
          readOnly: false
        - name: apache-sites-available-default
          mountPath: /etc/apache2/sites-available/000-default.conf
          subPath: 000-default.conf
          readOnly: false
        - name: wordfence-waf
          mountPath: /var/www/html/wordfence-waf.php
          subPath: wordfence-waf.php
          readOnly: false
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: lasntgadmin-pvc
        - name: wp-config
          secret: 
            secretName: lasntgadmin-wp-config
        - name: db-config
          secret: 
            secretName: lasntgadmin-db-config
        - name: php-config
          configMap:
            name: lasntgadmin-php-config
        - name: apache-sites-available-default
          configMap:
            name: lasntgadmin-apache-sites-available-default
        - name: htaccess-config
          configMap:
            name: lasntgadmin-htaccess-config
        - name: wordfence-waf
          configMap:
            name: lasntgadmin-wordfence-waf
